[gd_scene load_steps=13 format=3 uid="uid://dhnjc0g0tmxkn"]

[ext_resource type="Script" path="res://Code/Ships/FederationDreadnoughtPieces/federationTip.gd" id="1_k8cat"]
[ext_resource type="PackedScene" uid="uid://fore06to3qwb" path="res://Scenes/explosion.tscn" id="3_1h74b"]
[ext_resource type="Texture2D" uid="uid://bk7tyf0p3qxkl" path="res://Sprites/NPC Ships/federationDreadnoughtShip.png" id="4_6qfwf"]
[ext_resource type="AudioStream" uid="uid://bgwjucdfgxhq6" path="res://Sounds/explosion.wav" id="5_b5g7x"]
[ext_resource type="AudioStream" uid="uid://bql7cgkyc6avl" path="res://Sounds/BlackHole.wav" id="6_qeitp"]
[ext_resource type="AudioStream" uid="uid://cyw0kacvf5d7s" path="res://Sounds/Laser.wav" id="7_60f50"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1u3eh"]
radius = 51.0
height = 420.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sbw3c"]
radius = 36.0
height = 110.0

[sub_resource type="CircleShape2D" id="CircleShape2D_m4myw"]
radius = 950.0

[sub_resource type="AtlasTexture" id="AtlasTexture_g4hke"]
atlas = ExtResource("4_6qfwf")
region = Rect2(0, 69, 48, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_o55aq"]
atlas = ExtResource("4_6qfwf")
region = Rect2(48, 69, 48, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_qcljs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4hke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o55aq")
}],
"loop": true,
"name": &"drive",
"speed": 5.0
}]

[node name="FederationTail" type="CharacterBody2D" groups=["federation"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_k8cat")
Missile = ExtResource("3_1h74b")
Explosion = ExtResource("3_1h74b")

[node name="TooCloseDetection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TooCloseDetection"]
position = Vector2(12, 0)
shape = SubResource("CapsuleShape2D_1u3eh")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TooCloseDetection"]
position = Vector2(-48, 0)
shape = SubResource("CapsuleShape2D_sbw3c")

[node name="BoomDetection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoomDetection"]
position = Vector2(12, 0)
shape = SubResource("CapsuleShape2D_1u3eh")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BoomDetection"]
position = Vector2(-48, 0)
shape = SubResource("CapsuleShape2D_sbw3c")

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
position = Vector2(7, -11)
shape = SubResource("CircleShape2D_m4myw")

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="WaitTime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="MissileTime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_b5g7x")
volume_db = -5.0
pitch_scale = 0.5

[node name="Engine" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qeitp")
volume_db = -30.0

[node name="Summon" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_60f50")
volume_db = -20.0
pitch_scale = 0.4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-32, -7.27596e-12)
rotation = -1.5708
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_qcljs")
animation = &"drive"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(12, 0)
shape = SubResource("CapsuleShape2D_1u3eh")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-48, 0)
shape = SubResource("CapsuleShape2D_sbw3c")

[connection signal="body_entered" from="TooCloseDetection" to="." method="_on_too_close_detection_body_entered"]
[connection signal="body_entered" from="BoomDetection" to="." method="_on_boom_detection_body_entered"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="WaitTime" to="." method="_on_wait_time_timeout"]
